<resources>
    <string name="app_name">WorkTalk</string>
    <string name="login_goRegister_text_text">没有帐号吗？点这里试试看 》》》</string>
    <string name="register_username_text_text">用户名：</string>
    <string name="register_password_text_text">密码：</string>
    <string name="register_passwordAgain_text_text">重复一次密码：</string>
    <string name="register_register_btn_text">注册</string>
    <string name="register_registerTip_text_text">注册一个新帐号</string>
    <string name="register_passwordNotEqual">输入两个不同的密码</string>
    <string name="register_unKnownError">注册过程中发生了一个未知的错误</string>
    <string name="register_registerSuccess">注册成功！请前往登录界面登录</string>
    <string name="login_login_btn_text">登录</string>
    <string name="login_tip_text_text">登录WorkTalk</string>
    <string name="login_save_check_text">记住我</string>
    <string name="login_username_text_text">用户名：</string>
    <string name="login_password_text_text">密码：</string>
    <string name="login_unKnownError">登录过程中发生了一个未知的错误</string>
    <string name="login_loginSuccess">登录成功！</string>
</resources>
