<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterActivity"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/app_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_username_text"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:padding="8dp"
                android:text="@string/register_username_text_text"
                android:textColor="@color/register_tip_color" />

            <EditText
                android:id="@+id/register_username_edit"
                android:layout_width="200dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_password_text"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:padding="8dp"
                android:text="@string/register_password_text_text"
                android:textColor="@color/register_tip_color" />

            <EditText
                android:id="@+id/register_password_edit"
                android:layout_width="200dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_passwordAgain_text"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:padding="8dp"
                android:text="@string/register_passwordAgain_text_text"
                android:textColor="@color/register_tip_color" />

            <EditText
                android:id="@+id/register_passwordAgain_edit"
                android:layout_width="200dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/register_register_btn"
        android:layout_width="185dp"
        android:layout_height="47dp"
        android:layout_marginTop="88dp"
        android:background="@color/register_tip_color"
        android:text="@string/register_register_btn_text"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/register_back_imgBtn"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/register_back" />

    <TextView
        android:id="@+id/register_registerTip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_registerTip_text_text"
        android:textColor="@color/register_tip_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>